--- a/react-twitter-tutorial/src/MessageList.css
+++ b/react-twitter-tutorial/src/MessageList.css
@@ -1,10 +1,16 @@
+.MessageList {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .Message {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   margin: 20px;
   padding: 20px;
-  max-width: 600px;
+  width: 600px;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.25), 0 1px 3px 0 rgba(0, 0, 0, 0.25);
   background-color: #eef;
   font-size: 18px;
@@ -12,5 +18,6 @@
 
 .Message div {
   display: flex;
-  align-items: space-around;
+  justify-content: space-between;
+  width: 100%;
 }
