--- a/MessageList.css
+++ b/MessageList.css
@@ -1,11 +1,23 @@
+.MessageList {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .Message {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   margin: 20px;
   padding: 20px;
-  max-width: 800px;
+  width: 600px;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.25), 0 1px 3px 0 rgba(0, 0, 0, 0.25);
   background-color: #eef;
   font-size: 18px;
+}
+
+.Message div {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
 }
