--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,11 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.form-error {
+  color: #FFF;
+  background: #F00;
+  padding: 10px;
+  border-radius: 4px;
+  margin-bottom: 0.5em;
+}
