--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,31 @@ body {
   border-radius: 4px;
   margin-bottom: 0.5em;
 }
+
+.login {
+  max-width: 350px;
+  margin: 3em auto;
+}
+
+.form-field {
+  margin-bottom: 0.5em;
+}
+
+.form {
+  margin-bottom: 0.5em;
+}
+
+.form-input{
+  padding: 0.5em;
+  font-family: inherit;
+  font-size: 1rem;
+  width: 100%;
+
+}
+
+.form-label{
+  font-size: 0.875em;
+  font-weight: 700;
+  display: block;
+  margin-bottom: 0.25em;
+}
