--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,12 @@
+html {
+height: auto;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  display: flex;
+  flex-direction: column;
+  height: 100vh; /* Avoid the IE 10-11 `min-height` bug. */
 }
