--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,11 @@ body {
   margin: 3em auto;
 }
 
+.register {
+  max-width: 400px;
+  margin: 3em auto;
+}
+
 .form-field {
   margin-bottom: 0.5em;
 }
