tweedle box styled fancier

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -30,15 +30,55 @@
 
 /*Tweet Input Box*/
 .tweet-form {
+  background-color: #e8f5fd;
   margin-top: 2em;
-  border-radius: 25;
+  padding: 3em;
+  width: 50%;
+  margin: auto;
+  border-radius: 25px;
 }
 
 .tweet-input-box {
+  transition: all .2s ease-in-out;
   max-height: 36px;
   min-height: 36px;
+  max-width: 40em;
+  min-width: 40em;
   border-radius: 15px;
+  border: 1px solid #a4d9f8;
   padding: 10px 12px;
   background-color: #f2f2f2;
+}
+
+.tweet-input-box + input {
+  transition: all .2s ease-in;
+  visibility: hidden;
+  color: white;
+  background-color: #1da1f2;
+  border-radius: 15px;
+  padding: .75em;
+  margin-top: 1em;
+  margin-left: 44%;
+  display: block;
+}
+
+.tweet-input-box::placeholder {
   color: #1da1f2;
+}
+
+.tweet-input-box:hover {
+  background-color: #e8e8e8;
+}
+
+.tweet-input-box:focus {
+  transform: scale(1.1);
+  border-radius: 23px;
+  border-width: 2px;
+  min-height: 80px;
+  outline: none;
+}
+
+.tweet-input-box:focus + input {
+  transform: scale(1.1);
+  visibility: visible;
 }
